RequestPara was added in getAboutUs method in MainController class

--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -5,6 +5,6 @@
     <title>demoAboutUs</title>
 </head>
 <body>
-    <h1 th:text="${about}"/>
+    <h1 th:text="'Hello, ' + ${about}"/>
 </body>
 </html>
