This commit added output of products from the database to the main page, also was added style code for them. The getIndex method in the MainController class was rewrite

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,17 @@
             perferendis quasi quis unde veniam vero.</p>
     </div>
     <main class="container">
-
+        <div class="items" th:if="${!items.isEmpty()}">
+            <div th:each="el : ${items}">
+                <img th:src="${el.img}" th:alt="${el.title}">
+                <h3 th:text="${el.title}"/>
+                <p th:text="${el.info}"/>
+                <span th:text="${el.price} + '$'"/>
+            </div>
+        </div>
+        <div class="block" th:if="${items.isEmpty()}">
+            <p>There is no good in stock</p>
+        </div>
     </main>
     <div th:replace="~{layouts/footer :: footer}"></div>
 </body>
