--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -92,7 +92,42 @@ main.container {
     min-height: 500px;
 }
 
+.items {
+    display: flex;
+    float: left;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.items > div {
+    width: 30%;
+    margin-bottom: 30px;
+    background: #333;
+    padding: 30px;
+}
+
+.items > div h3 {
+    color: #fff;
+    margin: 7px 0;
+    font-size: 23px;
+}
+
+.items > div p {
+    color: #a7a7a7;
+}
+
+.items > div span {
+    background: #fdbd01;
+    padding: 10px;
+    position: relative;
+    top: 30px;
+    font-weight: 600;
+    color: #6a5412;
+}
+
 footer {
+    float: left;
+    width: 100%;
     margin-top: 50px;
     margin-bottom: 100px;
     text-align: center;
