--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <div th:replace="~{layouts/header :: header}"></div>
     <div class="presentation">
         <img src="https://club.foto.ru/gallery/images/preview/2011/02/17/1719742.jpg" alt="Cat">
-        <h2>Hello Kitty</h2>
+        <h2>Bucket of kittens</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aperiam cumque dolor fugit iste
             perferendis quasi quis unde veniam vero.</p>
     </div>
