--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -3,6 +3,7 @@
   <nav>
     <a href="/">Home page</a>
     <a href="/about-us">About Us</a>
+    <a href="/item/add">Add product</a>
   </nav>
 </header>
 
